--- a/MongoMigrationWebApp/Components/MigrationSettings.razor
+++ b/MongoMigrationWebApp/Components/MigrationSettings.razor
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="csbatchsize" class="form-label">Change Stream Batch Size:</label>
+                    <label for="csbatchsize" class="form-label">change stream Batch Size:</label>
                     <input type="number" id="csbatchsize" class="form-control" @bind="configuration.ChangeStreamBatchSize" />
                 </div>
 
